Backport version 2.0.0 to Java 8